syntax = "proto3";

package direktiv_functions;

option go_package = "github.com/direktiv/direktiv/pkg/functions/grpc";

import "pkg/functions/grpc/functions-common.proto";

message WatchPodsResponse {
	optional string event = 1;
	optional PodsInfo pod = 2;
}

message WatchPodsRequest {
	optional string ServiceName = 1;
	optional string RevisionName = 2;
}
