syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

message DeleteRevisionRequest {
	optional string revision = 1;
}
